--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.uberfire</groupId>
-    <artifactId>uberfire</artifactId>
+    <artifactId>uberfire-parent-with-dependencies</artifactId>
     <version>0.4.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.uberfire</groupId>
   <artifactId>uberfire-thora</artifactId>
   <version>0.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
